--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <title>Document</title>
   </head>
   <body>
-    <script src="js/object.js"></script>
+    <!-- <script src="js/object.js"></script> -->
+    <script src="js/cart.js"></script>
   </body>
 </html>
