--- a/index.html
+++ b/index.html
@@ -8,6 +8,8 @@
   </head>
   <body>
     <!-- <script src="js/object.js"></script> -->
-    <script src="js/cart.js"></script>
+    <!-- <script src="js/cart.js"></script> -->
+    <!-- <script src="js/task-declar.js"></script> -->
+    <script src="js/learn-object.js"></script>
   </body>
 </html>
