added task 'online-shop'

--- a/index.html
+++ b/index.html
@@ -9,7 +9,9 @@
   <body>
     <!-- <script src="js/object.js"></script> -->
     <!-- <script src="js/cart.js"></script> -->
+    <script src="js/task-online-shop.js"></script>
     <!-- <script src="js/task-declar.js"></script> -->
-    <script src="js/learn-object.js"></script>
+    <!-- <script src="js/learn-object.js"></script> -->
+    <!-- <script src="js/patern.js"></script> -->
   </body>
 </html>
